--- a/DataStructure/数据结构/树/平衡二叉树.md
+++ b/DataStructure/数据结构/树/平衡二叉树.md
@@ -1,10 +1,10 @@
 #  平衡二叉树
 
-## 平衡二叉树的概念
+## 1. 平衡二叉树的概念
 
-　　为什么需要平衡二叉树？二分搜索树的性能跟树的高度（h）有关系。
+### 1.1. 为什么需要平衡二叉树
 
-　　h 为二分搜索树的高度，那么高度 h 和二分搜索树节点树 n 的关系是什么呢？
+　　二分搜索树的性能跟树的高度（h）有关系。h 为二分搜索树的高度，那么高度 h 和二分搜索树节点树 n 的关系是什么呢？
 
 | 层数  | 该层的节点数 |
 | ----- | ------------ |
@@ -21,11 +21,13 @@
 
 　　为了避免最坏的情况发生，这个时候就需要一个能够平衡的二分搜索树，就算在最坏的情况也能保证二分搜索树的性能保持在 O(logn)。
 
+### 1.2. 平衡二叉树概念
+
 　　平衡二叉树也称为平衡二分搜索树（Balanced Binary Tree）是一种结构平衡的二分搜索树。
 
 　　平衡二叉树由二分搜索树发展而来，在二分搜索树的基础上平衡二叉树需要满足两个条件：
 
-1. 它的左右两个子树的高度差绝对值不超过1；
+1. 它的左右两个子树的高度差绝对值不超过 1；
 2. 左右两个子树都是一棵平衡二叉树。
 
 　　常见的平衡二叉搜索树有：
@@ -34,7 +36,7 @@
 2. 红黑树
 3. Treap
 
-## AVL 树
+## 2. AVL 树
 
 　　AVL 树是由 G.M.Adelson - V elsky 和 E.M.Landis 于 1962 年提出。AVL 树是最早的平衡二叉树。
 
@@ -57,9 +59,9 @@
 
 　　一棵平衡二叉树的平衡性被打破肯定是在插入或者删除的时候。
 
-## 插入操作保持 AVL 树的平衡
+## 3. 插入操作保持 AVL 树的平衡
 
-### 插入的元素在不平衡节点左侧的左侧，简称 LL
+### 3.1. 插入的元素在不平衡节点左侧的左侧，简称 LL
 
 　　如下面一棵 AVL 树，在插入节点 5 后，节点 15 的平衡因子变成了 2，树的平衡性被打破：
 
@@ -84,7 +86,7 @@
         // 右旋转
         nodeLeft.right = node;
         node.left = lRight;
-        //维护节点高度
+        // 维护节点高度
         node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
         nodeLeft.height = 1 + Math.max(getHeight(nodeLeft.left), getHeight(nodeLeft.right));
 
@@ -92,9 +94,7 @@
     }
 ```
 
-
-
-### 插入的元素在不平衡节点右侧的右侧，简称 RR
+### 3.2. 插入的元素在不平衡节点右侧的右侧，简称 RR
 
 　　这种情况是 LL 的镜像，它需要对不平衡的节点向左旋转：
 
@@ -109,7 +109,7 @@
         // 左旋转
         nodeRight.left = node;
         node.right = rLeft;
-        //维护节点高度
+        // 维护节点高度
         node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
         nodeRight.height = 1 + Math.max(getHeight(nodeRight.left), getHeight(nodeRight.right));
 
@@ -117,9 +117,7 @@
     }
 ```
 
-
-
-### 插入的元素在不平衡节点的左侧的右侧，简称 LR
+### 3.3. 插入的元素在不平衡节点的左侧的右侧，简称 LR
 
 　　插入的元素在不平衡节点的左侧的右侧，如下图所示：
 
@@ -129,13 +127,13 @@
 
 ![](image/LR2.png)
 
-
-
-### 插入的元素在不平衡节点的右侧的左侧，简称 RL
+### 3.4. 插入的元素在不平衡节点的右侧的左侧，简称 RL
 
 　　插入的元素在不平衡节点的右侧的左侧，如下图所示：
 
 ![](image/RL.png)
+
+### 3.5. 插入操作维护 AVL 平衡的代码
 
 　　插入操作维护 AVL 平衡性的相关代码：
 
@@ -157,7 +155,7 @@
         }
 
         // 维护 node 的高度
-        // 左右子树最高的高度+1
+        // 左右子树最高的高度 +1
         node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
 
         // 获取节点的平衡因子
@@ -166,23 +164,23 @@
         // 右旋转
         // 左子树比右子树要高超过了 1 ，说明当前节点的平衡被打破
         // 且新添加的节点是在左子树的左子树的左侧。
-        //LL
+        // LL
         if (balanceFactor > 1 && getBalanceFactor(node.left) >= 0) {
             return rotateRight(node);
         }
 
-        //RR
+        // RR
         if (balanceFactor < -1 && getBalanceFactor(node.right) <= 0) {
             return rotateLeft(node);
         }
 
-        //LR
+        // LR
         if (balanceFactor > 1 && getBalanceFactor(node.left) < 0) {
             node.left = rotateLeft(node.left);
             return rotateRight(node);
         }
 
-        //RL
+        // RL
         if (balanceFactor < -1 && getBalanceFactor(node.right) > 0) {
             node.right = rotateRight(node.right);
             return rotateLeft(node);
@@ -192,9 +190,7 @@
     }
 ```
 
-
-
-## 删除操作保持 AVL 树的平衡
+## 4. 删除操作保持 AVL 树的平衡
 
 　　删除操作和插入操作需要保持平衡的情况基本是一样的，代码如下所示：
 
@@ -231,8 +227,8 @@
             } else {
 
                 // 左右子树都有
-                Node<K, V> rMinNode = getMin(node.right);
-                rMinNode.right = remove(node.right, rMinNode.key);
+                Node<K, V> rMinNode = getMin(node.right); // 将右子树的最小值作为新的节点代替
+                rMinNode.right = remove(node.right, rMinNode.key); // 删除右子树的最小值
                 rMinNode.left = node.left;
                 size--;
                 node.left = node.right = null;
@@ -257,22 +253,22 @@
         // 右旋转
         // 左子树比右子树的高要超过了1，说明当前节点的平衡被打破
         // 且新添加的节点是在左子树的左子树的左侧
-        //LL
+        // LL
         if (balanceFactor > 1 && getBalanceFactor(retNode.left) >= 0) {
             return rotateRight(retNode);
         }
 
-        //RR
+        // RR
         if (balanceFactor < -1 && getBalanceFactor(retNode.right) <= 0) {
             return rotateLeft(retNode);
         }
 
-        //LR
+        // LR
         if (balanceFactor > 1 && getBalanceFactor(retNode.right) < 0) {
             retNode.left = rotateLeft(retNode.left);
             return rotateRight(retNode);
         }
-        //RL
+        // RL
         if (balanceFactor < -1 && getBalanceFactor(retNode.left) > 0) {
             retNode.right = rotateRight(retNode.right);
             return rotateLeft(retNode);
@@ -282,7 +278,7 @@
     }
 ```
 
-## 平衡二叉树完整代码
+## 5. 平衡二叉树完整代码
 
 ```java
 /**
@@ -290,11 +286,11 @@
  */
 public class BalanceBinaryTree<K extends Comparable, V> {
     public static class Node<K, V> {
-        Node left;
-        Node right;
-        V value;
-        K key;
-        int height;
+        Node left; // 左子树
+        Node right; // 右子树
+        V value; // 存储的值
+        K key; // 存储的 key
+        int height; // 树的高度
 
         public Node() {
 
@@ -322,8 +318,8 @@ public class BalanceBinaryTree<K extends Comparable, V> {
         }
     }
 
-    private Node root;
-    private int size;
+    private Node root; // 根节点
+    private int size; // 节点个数
 
     public void add(K key, V value) {
         root = add(root, key, value);
@@ -355,23 +351,23 @@ public class BalanceBinaryTree<K extends Comparable, V> {
         // 右旋转
         // 左子树比右子树要高超过了 1 ，说明当前节点的平衡被打破
         // 且新添加的节点是在左子树的左子树的左侧。
-        //LL
+        // LL
         if (balanceFactor > 1 && getBalanceFactor(node.left) >= 0) {
             return rotateRight(node);
         }
 
-        //RR
+        // RR
         if (balanceFactor < -1 && getBalanceFactor(node.right) <= 0) {
             return rotateLeft(node);
         }
 
-        //LR
+        // LR
         if (balanceFactor > 1 && getBalanceFactor(node.left) < 0) {
             node.left = rotateLeft(node.left);
             return rotateRight(node);
         }
 
-        //RL
+        // RL
         if (balanceFactor < -1 && getBalanceFactor(node.right) > 0) {
             node.right = rotateRight(node.right);
             return rotateLeft(node);
@@ -438,22 +434,22 @@ public class BalanceBinaryTree<K extends Comparable, V> {
         // 右旋转
         // 左子树比右子树的高要超过了1，说明当前节点的平衡被打破
         // 且新添加的节点是在左子树的左子树的左侧
-        //LL
+        // LL
         if (balanceFactor > 1 && getBalanceFactor(retNode.left) >= 0) {
             return rotateRight(retNode);
         }
 
-        //RR
+        // RR
         if (balanceFactor < -1 && getBalanceFactor(retNode.right) <= 0) {
             return rotateLeft(retNode);
         }
 
-        //LR
+        // LR
         if (balanceFactor > 1 && getBalanceFactor(retNode.right) < 0) {
             retNode.left = rotateLeft(retNode.left);
             return rotateRight(retNode);
         }
-        //RL
+        // RL
         if (balanceFactor < -1 && getBalanceFactor(retNode.left) > 0) {
             retNode.right = rotateRight(retNode.right);
             return rotateLeft(retNode);
@@ -461,21 +457,21 @@ public class BalanceBinaryTree<K extends Comparable, V> {
 
         return retNode;
     }
-
+	// 获取 node 节点的最小节点
     public Node<K, V> getMin(Node<K, V> node) {
         if (node.left == null) {
             return node;
         }
         return getMin(node.left);
     }
-
+	// 获取 node 节点的最大节点
     public Node<K, V> getMax(Node<K, V> node) {
         if (node.right == null) {
             return node;
         }
         return getMax(node.right);
     }
-
+	// 获取节点的高度
     public int getHeight(Node node) {
         if (node == null) {
             return 0;
@@ -485,7 +481,7 @@ public class BalanceBinaryTree<K extends Comparable, V> {
         }
         return 1 + Math.max(getHeight(node.left), getHeight(node.right));
     }
-
+	// 获取节点的平衡因子
     public int getBalanceFactor(Node node) {
         if (node == null) {
             return 0;
@@ -494,33 +490,33 @@ public class BalanceBinaryTree<K extends Comparable, V> {
         int rightHeight = getHeight(node.right);
         return leftHeight - rightHeight;
     }
-
+	// 右转节点
     private Node<K, V> rotateRight(Node<K, V> node) {
         Node<K, V> nodeLeft = node.left;
         Node<K, V> lRight = nodeLeft.right;
         // 右旋转
         nodeLeft.right = node;
         node.left = lRight;
-        //维护节点高度
+        // 维护节点高度
         node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
         nodeLeft.height = 1 + Math.max(getHeight(nodeLeft.left), getHeight(nodeLeft.right));
 
         return nodeLeft;
     }
-
+	// 左转节点
     private Node<K, V> rotateLeft(Node<K, V> node) {
         Node<K, V> nodeRight = node.right;
         Node<K, V> rLeft = nodeRight.left;
         // 左旋转
         nodeRight.left = node;
         node.right = rLeft;
-        //维护节点高度
+        // 维护节点高度
         node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
         nodeRight.height = 1 + Math.max(getHeight(nodeRight.left), getHeight(nodeRight.right));
 
         return nodeRight;
     }
-
+	// 广度优先遍历
     public void levelOrder() {
         if (root == null) {
             return;
@@ -541,11 +537,7 @@ public class BalanceBinaryTree<K extends Comparable, V> {
 }
 ```
 
-
-
-
-
-## 参考文章
+## 6. 参考文章
 
 1. [从零开始学数据结构和算法(七) huffman 树与 AVL 树](https://juejin.im/post/5c9464515188252d7e34df85)
 2. [数据结构与算法（十三）平衡二叉树之AVL树](https://chiclaim.blog.csdn.net/article/details/80740418)
