--- a/DataStructure/数据结构/树/线段树.md
+++ b/DataStructure/数据结构/树/线段树.md
@@ -1,16 +1,16 @@
 #  线段树
 
-## 线段树的概念
+## 1. 线段树的概念
 
 　　线段树（Segment Tree）也是一棵树，只不过元素的值代表一个区间。
 
 　　常用区间的统计操作，比如一个区间的最大值（max）、最小值（min）、和 (sum)等等。
 
-　　如一个长度为 10 的数组，它对应的求和线段树，如下图所示（途中的数字表示索引）：
+　　如一个长度为 10 的数组，它对应的求和线段树，如下图所示（图中的数字表示索引）：
 
 ![](image/线段树.png)
 
-　　根节点就是 0-length-1 的和，根节点的左右子树平分根节点的区间，然后依次类推，直到只有一个元素不能划分为止，该元素也就是二叉树的叶子节点。
+　　根节点就是 0 ~ length-1 的和，根节点的左右子树平分根节点的区间，然后依次类推，直到只有一个元素不能划分为止，该元素也就是二叉树的叶子节点。
 
 　　线段树是一个平衡二叉树，但不一定是完全二叉树。
 
@@ -24,14 +24,33 @@
 
 　　但是线段树并不一定是满二叉树，但是一定是平衡树，所以需要多冗余一层。也就是乘以 4 就足以盛放所有的结点数，但是会浪费一定的内存空间。
 
-## 线段树的基本操作
+## 2. 线段树的基本操作
 
-### 构建线段树
+### 2.1. 构建线段树
 
-　　根绝对线段树的描述，构建一个线段树就比较简单了，根节点就是整个区间，根节点的左右子树平分根节点的区间，直至区间内只剩下一个元素不能平分为止。如下面递归的伪代码：
+　　根据对线段树的描述，构建一个线段树就比较简单了，根节点就是整个区间，根节点的左右子树平分根节点的区间，直至区间内只剩下一个元素不能平分为止。如下面递归的伪代码：
 
-```
-
+```java
+private void buildSegmentTree(int treeIndex, int treeLeft, int treeRight) {
+    // 如果区间内只剩下一个元素
+    if (treeLeft == treeRight) {
+        tree[treeIndex] = data[treeLeft];
+        return;
+    }
+    // 当前节点左子树索引
+    int leftTreeIndex = getLeft(treeIndex);
+    // 当前节点右子树索引
+    int rightTreeIndex = getRight(treeIndex);
+    // int mid = (left+right)/2;
+    int mid = treeLeft + (treeRight - treeLeft) / 2;
+    // 构建左子树
+    buildSegmentTree(leftTreeIndex, treeLeft, mid);
+    // 构建右子树
+    buildSegmentTree(rightTreeIndex, mid + 1, treeRight);
+    // 当前节点存放的值，根据具体业务，如果求和就是两个值相加
+    // 如果是求最大值，那么就存放最大值
+    tree[treeIndex] = tree[leftTreeIndex] + tree[rightTreeIndex]
+}
 ```
 
 　　对下面一个数组：
@@ -42,9 +61,7 @@
 
 ![](image/构建线段树2.png)
 
-
-
-### 修改线段树
+### 2.2. 修改线段树
 
 　　针对上面的数组，把索引为 1 的值改成 6 如下图所示：
 
@@ -54,16 +71,16 @@
 
 ![](image/修改线段树2.png)
 
-### 线段树的查询
+### 2.3. 线段树的查询
 
 　　对于线段树的查询，主要有以下几种情况：
 
 1. 要查询的区间在刚好就是当前节点的区间。
-2. 要查找的区间在当前节点你的左子树区间
+2. 要查找的区间在当前节点的左子树区间
 3. 要查找的区间在当前节点的右子树区间
 4. 要查找的区间一部分在当前节点的左子树区间，一部分在右子树区间。
 
-## 实现一个线段树
+## 3. 实现一个线段树
 
 　　下面实现的线段树，有三个功能：
 
@@ -76,10 +93,10 @@
  * 线段树
  */
 public class ArraySegmentTree<T> {
-    private T tree[];
-    private T data[];
+    private T tree[]; // 树的数据
+    private T data[]; // 数据
 
-    private Merger<T> merger;
+    private Merger<T> merger; // 节点的父节点存储的是两个节点的什么，比如是和或者是最大值之类的
 
     public interface Merger<T> {
         T merge(T a, T b);
@@ -91,25 +108,28 @@ public class ArraySegmentTree<T> {
         for (int i = 0; i < data.length; i++) {
             data[i] = arr[i];
         }
-        this.tree = (T[]) new Object[data.length * 4];
-        buildSegmentTree(0, 0, data.length - 1);
+        this.tree = (T[]) new Object[data.length * 4]; // 树的存储空间是数据的 4 倍
+        buildSegmentTree(0, 0, data.length - 1); // 构建线段树
     }
-
+	// 构建线段树
+    // treeIndex 是树节点的索引
+    // treeLeft 和 treeRight 是数组存储在节点 treeIndex 的数据范围，如果 treeLeft 和 treeRight 是一个数据范围，会将这个数据范围分为树节点 treeIndex 的左子树和右子树
     private void buildSegmentTree(int treeIndex, int treeLeft, int treeRight) {
+        // 到了叶子节点
         if (treeLeft == treeRight) {
             tree[treeIndex] = data[treeLeft];
             return;
         }
-        //当前节点左子树索引
+        // 当前节点左子树索引
         int leftTreeIndex = getLeft(treeIndex);
         // 当前节点右子树的索引
         int rightTreeIndex = getRight(treeIndex);
-        int mid = treeLeft + (treeRight - treeLeft) / 2;
+        int mid = treeLeft + (treeRight - treeLeft) / 2;// 将数据分为两部分进行构建左子树和右子树
         // 构建左子树
         buildSegmentTree(leftTreeIndex, treeLeft, mid);
         // 构建右子树
         buildSegmentTree(rightTreeIndex, mid+1, treeRight);
-        // 当前节点存访的值
+        // 当前节点存放的值
         tree[treeIndex] = merger.merge(tree[leftTreeIndex], tree[rightTreeIndex]);
     }
 
@@ -118,9 +138,9 @@ public class ArraySegmentTree<T> {
     }
 
     /**
-     * @param treeIndex 当前查找的节点
-     * @param treeLeft  treeIndex 的左边界
-     * @param treeRight treeIndex 的右边界
+     * @param treeIndex 当前查找的节点，是树的结点
+     * @param treeLeft  treeIndex 的左边界，是数据的左边界
+     * @param treeRight treeIndex 的右边界，是数据的右边界
      * @param queryL    用户需要查找的左边界
      * @param queryR    用户需要查找的右边界
      * @return
@@ -143,7 +163,7 @@ public class ArraySegmentTree<T> {
             return query(leftTreeIndex, treeLeft, mid, queryL, queryR);
         }
 
-        //3. 需要查找的范围完全在右子树的区间里
+        // 3. 需要查找的范围完全在右子树的区间里
         if (queryL >= mid + 1) {
             return query(rightTreeIndex, mid + 1, treeRight, queryL, queryR);
         }
@@ -158,7 +178,7 @@ public class ArraySegmentTree<T> {
         data[index] = e;
         update(0, 0, data.length - 1, index, e);
     }
-
+	// 更新结点
     private void update(int treeIndex, int treeLeft, int treeRight, int index, T e) {
         if (treeLeft == treeRight) {
             tree[treeIndex] = e;
@@ -172,7 +192,7 @@ public class ArraySegmentTree<T> {
         } else if (index >= mid + 1) {
             update(rightChildIndex, mid + 1, treeRight, index, e);
         }
-        // 更改完叶子节点后，还需要对他的所有祖辈节点更新
+        // 更改完叶子节点后，还需要对它的所有祖辈节点更新
         tree[treeIndex] = merger.merge(tree[leftChildIndex], tree[rightChildIndex]);
     }
 
@@ -209,15 +229,15 @@ public class ArraySegmentTree<T> {
 }
 ```
 
-## LeetCode 关于线段树的问题
+## 4. LeetCode 关于线段树的问题
 
-### LeetCode 第 303 号问题
+### 4.1. LeetCode 第 303 号问题
 
-#### 问题描述
+#### 4.1.1. 问题描述
 
 　　给定一个整数数组 nums，求出数组从索引 i 到 j （i<=j）范围内元素的总和，包含 i,j 两点。
 
-#### 问题示例
+#### 4.1.2. 问题示例
 
 　　给定 nums = [-2,0,3,-5,2,-1]，求和函数为 sumRange(int i,int j)
 
@@ -227,11 +247,11 @@ public class ArraySegmentTree<T> {
 
 　　sumRange(0,5) -> -3
 
-#### 问题说明
+#### 4.1.3. 问题说明
 
 　　你可以假设数组不可变，会多次调用 sumRange 方法。
 
-#### 解决问题
+#### 4.1.4. 解决问题
 
 　　对于这个问题，在脑海中的方案就是遍历区间 [i,j]，然后累加。
 
@@ -287,6 +307,7 @@ public class NumArray2 {
         int mid = treeLeft + (treeRight - treeLeft) / 2;
         buildSegmentTree(leftTreeIndex, treeLeft, mid);
         buildSegmentTree(rightTreeIndex, mid + 1, treeRight);
+        // 父节点存储的是子节点的和
         tree[treeIndex] = tree[leftTreeIndex] + tree[rightTreeIndex];
     }
 
@@ -322,7 +343,7 @@ public class NumArray2 {
     private int getRight(int treeIndex) {
         return treeIndex * 2 + 2;
     }
-
+	// 求区间的和
     public int sumRange(int i, int j) {
         System.out.println("tree:" + Arrays.toString(tree));
         return query(i, j);
@@ -332,17 +353,15 @@ public class NumArray2 {
 
 　　最后获得了 LeetCode 的通过。
 
-### LeetCode 第 307 号问题
+### 4.2. LeetCode 第 307 号问题
 
-　　这个问题和上面的 303 号问题基本一样，唯一不同的是需要修改数组里的元素。
-
-#### 问题描述
+#### 4.2.1. 问题描述
 
 　　给定一个整数数组 nums，求出数组从索引 i 到 j（i <= j）范围内元素的总和，包含 i,j 两点。
 
 　　update(i,val) 函数可以通过将下标为 i 的数值更新为 val，从而对数列进行修改。
 
-#### 问题示例
+#### 4.2.2. 问题示例
 
 ```java
 示例：
@@ -352,13 +371,15 @@ update(1,2)
 sumRange(0,2) -> 8
 ```
 
-#### 问题说明
+#### 4.2.3. 问题说明
 
 　　数组仅可以在 update 函数下进行修改。
 
-　　你可以假设 update 函数预 sumRange 函数的调用次数是均匀分布的。
+　　你可以假设 update 函数与 sumRange 函数的调用次数是均匀分布的。
 
-#### 解决问题
+#### 4.2.4. 解决问题
+
+　　这个问题和上面的 303 号问题基本一样，唯一不同的是需要修改数组里的元素。
 
 　　这个问题，在上一个问题代码的基础上，调用线段树的 update 方法即可。
 
@@ -461,7 +482,7 @@ public class NumArray3 {
 }
 ```
 
-## 参考文章
+## 5. 参考文章
 
 1. [数据结构与算法（十）线段树(Segment Tree)入门](https://chiclaim.blog.csdn.net/article/details/80643017)
 
