--- a/Java/线程/使用管程实现生产者-消费者模式.md
+++ b/Java/线程/使用管程实现生产者-消费者模式.md
@@ -1,12 +1,141 @@
 # 使用管程实现生产者-消费者模式
 
+## 1. 管程
+
 　　使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不同意出错，也是扽客户端代码调用更容易。
 
 　　管程有一个重要特性：在一个时刻只能有一个进程使用管程。进程在无法继续执行的时候不能一直占用管程，否则其他进程永远不能使用管程。
 
 　　管程引入了条件变量以及相关的操作：wait() 和 signal() 来实现同步操作。对条件变量执行 wait() 操作会导致调用进程阻塞，把管程让出来给另一个进程持有。signal() 操作用于唤醒被阻塞的进程。
 
-## 使用管程实现生成这-消费者问题
+## 2. 代码实现
+
+　　Java 中可以使用 ReentrantLock 来实现管程。
+
+　　使用两个 Condition 来完成，empty 来记录缓冲区的数量，在生产者进程中使用，当 size 不大于 cacheSize 的时候才可以放入物品；full 来记录满缓冲区的数量，在消费者进程中使用，当 size 大于 0 的时候菜可以取出物品。
+
+```java
+public class Monitor {
+
+    public static void main(String[] args) {
+        Cache cache = new Cache(10);//默认库房最多只能存放 10 个产品
+        new Thread(new Producer(cache)).start();
+        new Thread(new Consumer(cache)).start();
+    }
+
+    /**
+     * 生产者
+     */
+    public static class Producer implements Runnable {
+        private Cache cache;
+
+        public Producer(Cache cache) {
+            this.cache = cache;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    cache.produce();
+                    Thread.sleep((int) (1000 * Math.random()));
+
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+
+    /**
+     * 消费者
+     */
+    public static class Consumer implements Runnable {
+        private Cache cache;
+
+        public Consumer(Cache cache) {
+            this.cache = cache;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    cache.consume();
+                    Thread.sleep((int) (1000 * Math.random()));
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+
+    /**
+     * 仓库
+     */
+    public static class Cache {
+        private int cacheSize; // 最大库存
+        private ReentrantLock reentrantLock; // 锁
+        // 记录空缓冲区的数量
+        // 在生产者进程中使用，当 size 不大于 cacheSize 的时候才可以放入物品
+        private Condition empty;
+        // 满缓冲区的数量
+        // 在消费者进程中使用，当 size 大于 0 的时候才可以取出物品
+        private Condition full;
+        private int size = 0; // 现有库存
+
+        public Cache(int size) {
+            this.cacheSize = size;
+            reentrantLock = new ReentrantLock();
+            empty = reentrantLock.newCondition();
+            full = reentrantLock.newCondition();
+        }
+
+        public int getCacheSize() {
+            return cacheSize;
+        }
+
+        public void produce() {
+            try {
+                // 加锁
+                reentrantLock.lock();
+                // 如果库存已满，则等待
+                while (size >= cacheSize) {
+                    empty.await();
+                }
+                size++;
+                System.out.println("生产者生产，size:" + size);
+                // 生产后，唤醒消费者
+                full.signal();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            } finally {
+                reentrantLock.unlock();
+            }
+        }
+
+        public void consume() {
+            try {
+                // 加锁
+                reentrantLock.lock();
+                // 如果没有库存，则等待
+                while (size <= 0) {
+                    full.await();
+                }
+                size--;
+                System.out.println("消费者消费，size:" + size);
+                // 消费后，唤醒生产者
+                empty.signal();
+            } catch (
+                    InterruptedException e) {
+                e.printStackTrace();
+            } finally {
+                reentrantLock.unlock();
+            }
+        }
+    }
+}
+```
 
 
 ## 参考文章
