--- a/system/死锁.md
+++ b/system/死锁.md
@@ -1,6 +1,6 @@
 #  死锁
 
-#### 4.1.12. 死锁
+## 死锁概念
 
 　　两个以上的进程互相要求双方释放已经占用的资源导致无法继续运行下去的现象。
 
@@ -8,13 +8,13 @@
 
 　　例如：一个系统有一台扫描仪 R1，一台刻录机 R2，有两个进程 P1、P2，他们都准备将骚猫的文档刻录到 CD 上，P1 先请求 R1 成功，P2 先请求 R2 并成功，后来，P1 又请求 R2，但却因为已经分配而阻塞，P2 请求 R1，也因分配而阻塞，此时，双方都被阻塞，都希望双方释放自己所需的资源，但又谁都不能得到自己所需的资源而继续进程，从而一直占用自己所占的资源，就形成死锁。
 
-#### 4.1.13. 可抢占性资源和不可抢占性资源
+## 可抢占性资源和不可抢占性资源
 
 　　前者：某进程获得这类资源后，该资源可以在被其他进程或系统抢占。
 
 　　后者：一旦系统将资源分配给一个进程以后，就不能把它强行收回，只能等它用完自行释放。
 
-#### 4.1.14. 产生死锁的原因
+## 产生死锁的原因
 
 1. 竞争不可抢占性资源。
 2. 进程运行推进的顺序不合适。
@@ -22,7 +22,9 @@
 
 　　如果系统资源充足，进程的资源请求都能够得到满足，死锁出现的可能性就很低，否则就会因抢夺优先的资源而陷入死锁。其次，进程运行推进顺序与速度不同，也可能产生死锁。
 
-#### 4.1.15. 产生死锁的四个必要条件：互斥条件、请求与保持条件、不可剥夺条件、循环等待条件。
+## 产生死锁的四个必要条件
+
+产生死锁的四个必要条件：互斥条件、请求与保持条件、不可剥夺条件、循环等待条件。
 
 ![](image/死锁必要条件.png)
 
@@ -44,7 +46,11 @@
 
 　　这四个条件是死锁的必要条件，只要系统发生死锁，这些条件必然成立，而只要上述条件之一不满足，就不会发生死锁。
 
-#### 4.1.16. 解决死锁的 4 种处理策略
+
+
+## 处理方法
+
+解决死锁的 4 种处理策略：
 
 　　鸵鸟策略（即不理睬策略）、预防策略、避免策略、检测与解除策略。
 
@@ -54,20 +60,6 @@
 4. 解除死锁：与死锁检测配合，将系统从死锁中解脱出来（撤销进程或者剥夺资源）。对检测到的和死锁相关的进程以及资源，通过撤销或者挂起的方式，释放一些资源并将其分配给处于阻塞状态的进程，使其转变为就绪态。实现难度大。
 
 　　死锁忽略：Windows、Linux 个人版都不做死锁处理，直接忽略，大不了重启就好了，小概率事件，代价可以接受。
-
-#### 4.1.17. 死锁预防
-
-　　预先静态分配法（破坏不可剥夺条件）、资源有序分配法（将资源分类按顺序排列，保证不形成环路）。
-
-#### 4.1.18. 死锁避免
-
-　　银行家算法（对每个资源请求进行检测，确保安全。需要很大的系统开销）。
-
-#### 4.1.19. 死锁解除
-
-　　资源剥夺法、撤销进程法。
-
-## 处理方法
 
 　　主要有以下四种方法：
 
@@ -123,11 +115,15 @@
 
 ### 3. 死锁恢复
 
+　　资源剥夺法、撤销进程法。
+
 * 利用抢占资源
 * 利用回滚恢复
 * 通过杀死进程恢复
 
 ## 死锁预防
+
+　　预先静态分配法（破坏不可剥夺条件）、资源有序分配法（将资源分类按顺序排列，保证不形成环路）。
 
 　　在程序运行之前预防发生死锁。
 
@@ -146,6 +142,8 @@
 　　给资源同一编号，进程只能按编号顺序来请求资源。
 
 ## 死锁避免
+
+　　银行家算法（对每个资源请求进行检测，确保安全。需要很大的系统开销）。
 
 　　在程序运行时避免发生死锁。
 
