--- a/system/设备管理.md
+++ b/system/设备管理.md
@@ -1,6 +1,10 @@
 #  设备管理
 
-## 磁盘结构
+　　设备管理的目标是如何提高设备的利用率，为用户提供方便统一的界面。
+
+　　设备管理采用的缓冲技术：通道技术、DMS 技术、缓冲技术、Spooling 技术。
+
+## 1. 磁盘结构
 
 1. 盘面（Platter）：一个磁盘有多个盘面；
 2. 磁道（Track）：盘面上的圆形带状区域，一个盘面可以有多个磁道；
@@ -11,7 +15,7 @@
 
 ![](image/磁盘结构.jpg)
 
-## 磁盘调度算法
+## 2. 磁盘调度算法
 
 　　读写一个磁盘的时间的影响因素有：
 
@@ -21,40 +25,35 @@
 
 　　其中，寻道时间最长，因此磁盘调度的主要目标是使磁盘的平均寻道时间最短。
 
-### 1. 先来先服务-FCFS，First Come First Served
+　　磁盘调度算法：先来先服务（FCFS）、最短寻道时间（SSTF）、扫描算法（SCAN）（先由里往外到达最外后由外向里，也就是电梯算法）、单向扫描调度算法（CSCAN）（无法换向，只能由里向外）。
+
+### 2.1. 先来先服务-FCFS，First Come First Served
 
 　　按照磁盘请求的顺序进行调度。
 
-　　优点是公平和简单。缺点也很明显，因为未对寻道做任何优化，使平均寻道时间可能较长。
+　　优点是公平和简单。
 
-### 2. 最短寻道时间优先 - SSTF，Shortest Seek Time First
+　　缺点也很明显，因为未对寻道做任何优化，使平均寻道时间可能较长。
 
-　　优先调度与当前磁头所在磁道举例最近的磁道。
+### 2.2. 最短寻道时间优先 - SSTF，Shortest Seek Time First
+
+　　优先调度与当前磁头所在磁道距离最近的磁道。
 
 　　虽然平均寻道时间比较低，但是不够公平。如果新到达的磁道请求总是比一个在等待的磁道请求近，那么在等待的磁道请求会一直等待下去，也就是出现饥饿现象。具体来说，两端的磁盘请求更容易出现饥饿现象。
 
 ![](image/最短寻道时间优先.png)
 
-### 3. 电梯算法-SCAN
+### 2.3. 电梯算法-SCAN
 
 　　电梯总是保持一个方向运行，直到该方向没有请求为止，然后改变运行方向。
 
 　　电梯算法（扫描算法）和电梯的运行过程类似，总是按一个方向来进行磁盘调度，直到该方向上没有未完成的磁盘请求，然后改变方向。
 
-　　因为考虑了移动方向，因此所有的次哦按请求都会被满足，解决了 SSTF 的饥饿问题。
+　　因为考虑了移动方向，因此所有的磁盘请求都会被满足，解决了 SSTF 的饥饿问题。
 
 ![](image/电梯算法.png)
-
-## 6. 设备管理
-
-　　设备管理的目标是如何提高设备的利用率，位用户提供方便统一的界面。
-
-　　设别管理采用的缓冲技术：通道技术、DMS 技术、缓冲技术、Spooling 技术。
-
-　　磁盘调度算法：先来先服务（FCFS）、最短寻道时间（SSTF）、扫描算法（SCAN）（先由里往外到达最外后由外向里）、单向扫描调度算法（CSCAN）（无法换向，只能由里向外）。
 
 ## 参考文章
 
 1. [操作系统基础知识总结整理](https://blog.csdn.net/Song_JiangTao/article/details/79670805)
-2. [操作系统基础知识总结（重要）](https://www.cnblogs.com/xdyixia/p/9274909.html)
 3. [计算机操作系统](https://github.com/CyC2018/CS-Notes/blob/master/notes/计算机操作系统 - 目录.md)
